# nara-agent-registry

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  test.txt
docs/superpowers/plans/: 2026-03-12-fee-vault-pda.md
docs/superpowers/specs/: 2026-03-12-fee-vault-pda-design.md
idls/: nara_quest.json
migrations/: init.ts
programs/nara-agent-registry/: Cargo.toml
programs/nara-agent-registry/src/: constants.rs  error.rs  lib.rs  seeds.rs
programs/nara-agent-registry/src/instructions/: approve_rejected_twitter.rs  approve_tweet.rs  close_buffer.rs  delete_agent.rs  expand_config.rs  finalize_memory_append.rs  finalize_memory_new.rs  finalize_memory_update.rs  helpers.rs  init_buffer.rs  init_config.rs  log_activity.rs  mod.rs  register_agent.rs  register_agent_index.rs  reject_tweet.rs  reject_twitter.rs  reject_twitter_with_reason.rs  set_bio.rs  set_metadata.rs  set_referral.rs  set_twitter.rs  submit_tweet.rs  transfer_authority.rs  unbind_twitter.rs  unregister_agent_index.rs  update_activity_config.rs  update_admin.rs  update_fee_recipient.rs  update_points_config.rs  update_referral_config.rs  update_register_fee.rs  update_tweet_verify_config.rs  update_twitter_verification_config.rs  update_twitter_verifier.rs  verify_twitter.rs  withdraw_fees.rs  withdraw_twitter_verify_fees.rs  write_to_buffer.rs
programs/nara-agent-registry/src/state/: agent_alias.rs  agent_bio.rs  agent_index.rs  agent_memory.rs  agent_metadata.rs  agent_record.rs  agent_state.rs  agent_twitter.rs  memory_buffer.rs  mod.rs  program_config.rs  reverse_index.rs  tweet_record.rs  tweet_verify.rs  tweet_verify_queue.rs  twitter_handle.rs  twitter_queue.rs
tests/: nara-agent-registry.ts
